# Assignment---VSX

./: .gitignore  Assignment.md  README.md  alembic.ini  pyproject.toml
app/: main.py  worker.py
app/api/: dependency.py  tasks.py
app/config/: config.py  postgres.py  rabbitmq.py
app/config/migrations/: env.py
app/config/migrations/versions/: ad599140720c_create_account_table.py
app/domain/: exceptions.py  tasks.py
app/repositories/: tasks.py
app/use_cases/: tasks.py
deploy/: .env.app  .env.postgres  .env.rabbitmq  Dockerfile.app  Dockerfile.worker  docker-compose.yaml
tests/unit/: test_tasks_endpoint.py  test_tasks_use_case.py
